# MindPal

./: .env.example  .gitignore  .npmrc  .vercelignore  AUDIT_REPORT.md  Apply-Backend-V2.ps1  Apply-Hardened.ps1  Apply-Vercel-Python-Hotfix.ps1  BACKEND_V2_ARCHITECTURE.md  BACKEND_V2_AUDIT.md  BACKEND_V2_CHANGELOG.md  CSS_ACCORDION_ANALYSIS.html  DEPLOY_BACKEND_V2.md  DEPLOY_HARDENED.md  HARDENING_CHANGELOG.md  PROCESSSTRUCTUREDRESPONSE_FIX.md  README.MD  README.md  RELEASE_MANIFEST.sha256  Rollback-Backend-V2.ps1  TEST_processStructuredResponse.js  VERCEL_BUILD_FIX.md  VERCEL_INSTALL_FIX.md  VERCEL_PREBUILT_FRONTEND_FIX.md  VERCEL_PYTHON_DEPENDENCY_FIX.md  Verify-Backend-V2.ps1  Verify-MindPal.ps1  append_api.py  append_memory_llm.py  commit_review.txt  deploy.sh  fix_scroll.py  integrate_cloudflare_workers_ai.py  package-lock.json  package.json  pyproject.toml  requirements.txt  scratch_probe.py  scratch_push_env.py  scratch_test_all.py  (+9 more)
.vercel/: project.json
api/: index.py
archive/: .gitignore
backend/: main.py  main.py.bak  main.py.micfix.bak  main.py.remove_old_firebase_chat_context.bak  main.py.static_brand_assets.bak
doc/: Architecture.md  DEPLOYMENT_READY.md  MEMORY.md  MEMORY_FIXES_IMPLEMENTATION.md  MEMORY_FIX_SUMMARY.md  MEMORY_SYSTEM_ISSUES.md  MindPal_Task_Tracker.md  README_LEGACY.md  Safety.MD  VERCEL_DEPLOYMENT.md
docs/: README.md
frontend/: .eslintrc.json  eslint.config.mjs  index.html  index.html.meta.bak  mindpal.html  prebuilt-assets.manifest.json  robots.txt  runtime-config.js  site.webmanifest  sitemap.xml
scratch/: analyze_imports.py  (+9 more)
(+246 files in other folders)
