[project]
name = "mindpal"
version = "2.0.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.136,<0.137",
  "uvicorn[standard]>=0.35,<0.36",
  "pydantic>=2.12,<3",
  "pydantic-settings>=2.14,<3",
  "python-dotenv>=1.1,<2",
  "tzdata>=2026.3,<2027",
  "httpx>=0.28,<1",
  "PyYAML>=6.0,<7",
  "firebase-admin>=7.4,<8",
  "email-validator>=2.2,<3",
  "google-genai>=1.56,<2"
]

[project.optional-dependencies]
dev = [
  "pytest>=9,<10",
  "pytest-asyncio>=1.3,<2",
  "bandit>=1.9,<2",
  "ruff>=0.15,<1",
  "pip-audit>=2.10,<3",
]

[project.scripts]
app = "backend.main:app"

[tool.vercel]
entrypoint = "backend.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--strict-markers --strict-config"
